--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ aside {
 
 html,
 body {
+  font-family: 'Source Sans Pro';
   height: 100%;
   width: 100%;
   font-size: 100%;
@@ -172,17 +173,65 @@ h6 {
 }
 
 .progressBar .progressBar-complete {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 10%;
-          flex: 0 0 10%;
   background-color: #F0C4AB;
   border-right: 1px solid #000000;
 }
 
-.progressBar .progressBar-total {
+.progressBar .progressBar-complete__10 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10%;
+          flex: 0 0 10%;
+}
+
+.progressBar .progressBar-complete__20 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+}
+
+.progressBar .progressBar-complete__30 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+}
+
+.progressBar .progressBar-complete__40 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+}
+
+.progressBar .progressBar-complete__50 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.progressBar .progressBar-complete__60 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60%;
+          flex: 0 0 60%;
+}
+
+.progressBar .progressBar-complete__70 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70%;
+          flex: 0 0 70%;
+}
+
+.progressBar .progressBar-complete__80 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 80%;
+          flex: 0 0 80%;
+}
+
+.progressBar .progressBar-complete__90 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 90%;
           flex: 0 0 90%;
+}
+
+.progressBar .progressBar-total {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,6 +251,60 @@ h6 {
   text-align: right;
 }
 
+.progressBar .progressBar-total__90 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 90%;
+          flex: 0 0 90%;
+}
+
+.progressBar .progressBar-total__80 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 80%;
+          flex: 0 0 80%;
+}
+
+.progressBar .progressBar-total__70 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70%;
+          flex: 0 0 70%;
+}
+
+.progressBar .progressBar-total__60 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60%;
+          flex: 0 0 60%;
+}
+
+.progressBar .progressBar-total__50 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.progressBar .progressBar-total__40 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+}
+
+.progressBar .progressBar-total__30 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+}
+
+.progressBar .progressBar-total__20 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+}
+
+.progressBar .progressBar-total__10 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10%;
+          flex: 0 0 10%;
+}
+
 .wrapper {
   min-height: 100vh;
   display: -webkit-box;
@@ -218,6 +321,15 @@ h6 {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.content {
+  max-width: 680px;
+  display: block;
+  margin: 0 auto;
 }
 
 .question {
@@ -231,27 +343,39 @@ h6 {
 }
 
 .question_text {
+  max-width: 250px;
+  color: #333333;
+  font-size: 16px;
   text-align: left;
-  max-width: 200px;
+  padding: 5px;
+}
+
+.content_answer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flex__direct {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.flex__reverse {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 .answer {
-  display: block;
-}
-
-.answer_image {
-  margin: 0 auto 60px auto;
-  max-width: 224px;
-  max-height: 224px;
-}
-
-.answer_image img {
-  width: 100%;
-  height: 100%;
-}
-
-.answer_items {
-  margin: 0 auto 50px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -260,15 +384,158 @@ h6 {
           justify-content: center;
 }
 
+.answer_image-wrapper {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 300px;
+}
+
+.answer_image {
+  position: relative;
+  overflow: hidden;
+}
+
+.answer_image img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.item_img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.item_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.d-none {
+  display: none;
+}
+
+.answer_image__contain img {
+  width: 100%;
+}
+
+.answer_btn-wrapper {
+  max-width: 164px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+  display: block;
+  margin: 10px auto;
+}
+
+.answer_btn {
+  height: 100%;
+  text-align: center;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  color: #000000;
+  background: #FFFFFF;
+  border: 1px solid #757575;
+  border-radius: 2px;
+  padding: 5px 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.answer_btn:hover {
+  cursor: pointer;
+  color: #FAFAFA;
+  background: #8DA5B1;
+  border: 1px solid #F0C4AB;
+  border-radius: 2px;
+}
+
+.no-border {
+  border: none !important;
+}
+
+a {
+  text-decoration: none;
+}
+
+.answer_items {
+  margin: 10px auto 10px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.item-label {
+  padding: 20px 0;
+  margin-bottom: 20px;
+}
+
+.items__wrap {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.item__basis-50 {
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
+}
+
+.item__basis-33 {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
 .item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0 5px;
+  margin: 5px;
+}
+
+.item label {
+  height: 100%;
+}
+
+.item_title {
+  padding: 10px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+}
+
+.item_body {
+  width: 100%;
+  margin-bottom: 50px;
+  height: 130px;
+}
+
+.item_btn {
+  height: 100%;
 }
 
 .item-radio {
@@ -349,6 +616,30 @@ h6 {
       transform: scale(1);
 }
 
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox] + label {
+  display: inline-block;
+  margin: -2px;
+  padding: 4px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #333;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+input[type=checkbox]:checked + label {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 6px rgba(255, 162, 0, 0.65), 0 2px 2px #F44336;
+  box-shadow: inset 0 3px 6px rgba(255, 162, 0, 0.65), 0 2px 2px #F44336;
+}
+
 .footer-wrapper {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 78px;
@@ -378,4 +669,16 @@ h6 {
 
 body {
   background-color: #ffffff;
+}
+
+@media screen and (min-width: 440px) {
+  .item_body {
+    height: 180px;
+  }
+}
+
+@media screen and (min-width: 520px) {
+  .item_body {
+    height: 250px;
+  }
 }
