--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,21 @@ h6 {
      object-position: center;
 }
 
+.item_img__final {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.item_img__final img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+
 .d-none {
   display: none;
 }
@@ -503,6 +518,11 @@ a {
       flex-wrap: wrap;
 }
 
+.item__basis-100 {
+  -ms-flex-preferred-size: 95%;
+      flex-basis: 95%;
+}
+
 .item__basis-50 {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
@@ -517,6 +537,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 5px 5px 50px 5px;
 }
 
@@ -529,6 +552,15 @@ a {
 }
 
 .item_title {
+  width: 100%;
+  padding: 10px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+}
+
+.item_title__final {
+  width: 50%;
   padding: 10px 0;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 25%;
@@ -538,6 +570,11 @@ a {
 .item_body {
   width: 100%;
   height: 130px;
+}
+
+.item_body__final {
+  width: 100%;
+  height: 180px;
 }
 
 .item_btn {
@@ -680,10 +717,18 @@ body {
   .item_body {
     height: 180px;
   }
+
+  .item_body__final {
+    height: 230px;
+  }
 }
 
 @media screen and (min-width: 520px) {
   .item_body {
     height: 250px;
+  }
+
+  .item_body__final {
+    height: 300px;
   }
 }
