--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ h6 {
 
 .header-wrapper {
   height: 50px;
-  margin-bottom: 25px;
+  margin-bottom: 5px;
 }
 
 .container {
@@ -169,7 +169,7 @@ h6 {
   background: #ffffff;
   border: 1px solid #000000;
   border-radius: 0px;
-  margin: 0 0 40px 0;
+  margin: 0 0 30px 0;
 }
 
 .progressBar .progressBar-complete {
@@ -339,14 +339,13 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 0 30px 0;
 }
 
 .question_text {
   max-width: 250px;
   color: #333333;
   font-size: 16px;
-  text-align: left;
+  text-align: center;
   padding: 5px;
 }
 
@@ -359,7 +358,6 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 30px;
 }
 
 .flex__direct {
@@ -377,6 +375,7 @@ h6 {
 }
 
 .answer {
+  padding: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -393,6 +392,7 @@ h6 {
       -ms-flex-pack: center;
           justify-content: center;
   max-width: 300px;
+  margin: 0 0 20px 0;
 }
 
 .answer_image {
@@ -412,6 +412,7 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background-color: #8DA5B1;
 }
 
 .item_img img {
@@ -421,6 +422,10 @@ h6 {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.item_img img:hover {
+  opacity: 0.6;
 }
 
 .item_img__final {
@@ -436,6 +441,10 @@ h6 {
      object-fit: contain;
   -o-object-position: center;
      object-position: center;
+}
+
+.item_img__final img:hover {
+  opacity: 0.6;
 }
 
 .d-none {
@@ -494,7 +503,7 @@ a {
 }
 
 .answer_items {
-  margin: 10px auto 10px auto;
+  margin: 5px auto 5px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -540,7 +549,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 5px 5px 50px 5px;
+  margin: 5px 5px 15px 5px;
 }
 
 .item label {
@@ -549,6 +558,10 @@ a {
 
 .mb-5 {
   margin-bottom: 5px !important;
+}
+
+.mb-25 {
+  margin: 25px 5px 25px 5px !important;
 }
 
 .item_title {
@@ -680,6 +693,29 @@ input[type=checkbox]:checked + label {
   outline: 0;
   -webkit-box-shadow: inset 0 3px 6px rgba(255, 162, 0, 0.65), 0 2px 2px #F44336;
   box-shadow: inset 0 3px 6px rgba(255, 162, 0, 0.65), 0 2px 2px #F44336;
+}
+
+.back-btn-wrapper {
+  margin: 0 20px 20px 20px;
+  text-align: center;
+}
+
+.back_btn {
+  padding: 5px 20px;
+  color: #333333;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 3px;
+  -webkit-transition: all 0.5s ease 0;
+  -o-transition: all 0.5s ease 0;
+  transition: all 0.5s ease 0;
+}
+
+.back_btn:hover {
+  color: #022b57;
 }
 
 .footer-wrapper {
