--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,8 @@ h6 {
   padding: 5px;
 }
 
-.content_answer {
+.content_answer,
+.content_login {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -374,7 +375,8 @@ h6 {
           flex-direction: column-reverse;
 }
 
-.answer {
+.answer,
+.login {
   padding: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -412,7 +414,6 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #8DA5B1;
 }
 
 .item_img img {
@@ -426,6 +427,11 @@ h6 {
 
 .item_img img:hover {
   opacity: 0.6;
+}
+
+.item_img__contain img {
+  -o-object-fit: contain !important;
+     object-fit: contain !important;
 }
 
 .item_img__final {
@@ -502,6 +508,62 @@ a {
   text-decoration: none;
 }
 
+.answer_info_wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.answer_info {
+  width: 100%;
+  position: relative;
+  padding: 20px 10px;
+  display: block;
+  text-align: center;
+  color: #333333;
+  font-family: 'Source Sans Pro';
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.answer_info span {
+  font-weight: 600;
+}
+
+.answer_info ul {
+  margin: 0 auto;
+  width: 60%;
+  text-align: left;
+  color: #333333;
+}
+
+.answer_info ul li {
+  list-style: disc;
+}
+
+.answer_info__border {
+  position: relative;
+  display: block;
+  width: 200px;
+}
+
+.answer_info__border:after {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 1px;
+  background: #000;
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+
 .answer_items {
   margin: 5px auto 5px auto;
   display: -webkit-box;
@@ -520,6 +582,10 @@ a {
 .item-label {
   padding: 20px 0;
   margin-bottom: 20px;
+}
+
+.item-label span {
+  font-weight: 600;
 }
 
 .items__wrap {
@@ -554,6 +620,10 @@ a {
 
 .item label {
   height: 100%;
+}
+
+.mb-0 {
+  margin-bottom: 0px !important;
 }
 
 .mb-5 {
@@ -718,6 +788,181 @@ input[type=checkbox]:checked + label {
   color: #022b57;
 }
 
+.login_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px;
+  background: #FFFFFF;
+  border: 1px solid #E0E0E0;
+  border-radius: 0px;
+  margin: 0 0 20px 0;
+  width: 100%;
+  max-width: 400px;
+}
+
+.login_wrapper form {
+  width: 100%;
+}
+
+.login_form,
+.personal-note_form {
+  width: 100%;
+}
+
+.login_email,
+.login_google {
+  text-align: center;
+  display: block;
+}
+
+.login_email_input,
+.login_email_btn,
+.personal-note_btn {
+  margin: 0 0 20px 0;
+}
+
+.login_email_input input,
+.login_email_btn input,
+.personal-note_btn input {
+  width: 100%;
+  height: 33px;
+  color: #000000;
+  font-family: 'Source Sans Pro';
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  text-align: left;
+  padding: 5px;
+  background: #FFFFFF;
+  border: 1px solid #9E9E9E;
+  border-radius: 0px;
+}
+
+.login_email_input button,
+.login_email_btn button,
+.personal-note_btn button {
+  width: 100%;
+  height: 33px;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  font-size: 15px;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
+  background: #616161;
+  border: none;
+  border-radius: 0px;
+}
+
+.personal-note_input__title,
+.personal-note_input__text {
+  margin: 0 0 20px 0;
+}
+
+.personal-note_input__title input,
+.personal-note_input__text input {
+  width: 100%;
+  color: #000000;
+  font-family: 'Source Sans Pro';
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  text-align: left;
+  padding: 5px;
+  background: #FFFFFF;
+  border: 1px solid #9E9E9E;
+  border-radius: 0px;
+}
+
+.personal-note_input__title button,
+.personal-note_input__text button {
+  width: 100%;
+  height: 33px;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  font-size: 15px;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
+  background: #616161;
+  border: none;
+  border-radius: 0px;
+}
+
+.personal-note_input__title input {
+  font-size: 14px;
+  text-align: center;
+  background-color: #EBD3C4;
+}
+
+.personal-note_input__text textarea {
+  width: 100%;
+  padding: 5px;
+  background-color: #EBD3C4;
+  height: 200px;
+}
+
+.login_google button {
+  width: 100%;
+  height: 33px;
+  color: #FFFFFF;
+  font-family: 'Source Sans Pro';
+  font-size: 15px;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
+  background: #616161;
+  border: none;
+  border-radius: 0px;
+}
+
+.login_border,
+.personal-note_border {
+  z-index: 5;
+  width: 100%;
+  height: 20px;
+  text-align: center;
+  position: relative;
+  display: block;
+  margin: 0 0 20px 0;
+}
+
+.login_border .login_border_text,
+.personal-note_border .login_border_text {
+  position: relative;
+  display: inline-block;
+  z-index: 8;
+  background: #FFF;
+  padding: 0 35px;
+  color: #333333;
+  font-size: 15px;
+}
+
+.login_border:after,
+.personal-note_border:after {
+  z-index: 4;
+  content: '';
+  position: absolute;
+  display: block;
+  height: 1px;
+  background: #9E9E9E;
+  top: 40%;
+  left: 0;
+  width: 100%;
+}
+
 .footer-wrapper {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 78px;
@@ -756,6 +1001,12 @@ body {
 
   .item_body__final {
     height: 230px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .answer_info ul li {
+    margin: 0 0 0 20%;
   }
 }
 
