--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,21 @@ h6 {
 }
 
 .item_img img:hover {
-  opacity: 0.6;
+  opacity: 0.7;
+}
+
+.item a {
+  color: #333333;
+  font-size: 15px;
+  text-align: center;
+}
+
+.item a:hover {
+  opacity: 0.7;
+}
+
+.item label:hover {
+  opacity: 0.7;
 }
 
 .item_img__contain img {
@@ -608,6 +622,11 @@ a {
       flex-basis: 30%;
 }
 
+.item__basis-25 {
+  -ms-flex-preferred-size: 23%;
+      flex-basis: 23%;
+}
+
 .item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -676,7 +695,6 @@ a {
 
 .item-label {
   color: #333333;
-  font-family: 'Source Sans Pro';
   font-size: 15px;
   text-align: center;
   padding: 5px;
@@ -748,7 +766,7 @@ input[type=checkbox] {
 input[type=checkbox] + label {
   display: inline-block;
   margin: -2px;
-  padding: 4px 12px;
+  padding: 1px;
   margin-bottom: 0;
   font-size: 14px;
   line-height: 20px;
@@ -963,6 +981,21 @@ input[type=checkbox]:checked + label {
   width: 100%;
 }
 
+.item-wrapper-inner {
+  padding: 5px;
+  background-color: #FAFAFA;
+  background: #FAFAFA;
+  border: none;
+  border-radius: 0px;
+  -webkit-box-shadow: 0 5px 5px -5px #333;
+          box-shadow: 0 5px 5px -5px #333;
+  text-align: center;
+}
+
+.padding_10 {
+  padding: 10px;
+}
+
 .footer-wrapper {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 78px;
@@ -1010,6 +1043,12 @@ body {
   }
 }
 
+@media screen and (min-width: 500px) {
+  .d-lg-none {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 520px) {
   .item_body {
     height: 250px;
@@ -1017,5 +1056,11 @@ body {
 
   .item_body__final {
     height: 300px;
+  }
+}
+
+@media screen and (max-width: 499.98px) {
+  .d-lg-block {
+    display: none;
   }
 }
